--- a/client/src/index.css
+++ b/client/src/index.css
@@ -112,6 +112,7 @@
 html {
   height: 100%;
   -webkit-text-size-adjust: 100%;
+  background-color: var(--color-cream);
 }
 
 body {
